--- a/CROSS_VALIDATION.ipynb
+++ b/CROSS_VALIDATION.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "d6227893",
+   "execution_count": 8,
+   "id": "66322e39",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import KFold\n",
     "from sklearn import datasets\n",
     "from sklearn.linear_model import LinearRegression"
    ]
@@ -17,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "19eecab9",
+   "id": "7013050d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,17 +28,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "9e7b7025",
+   "execution_count": 9,
+   "id": "d57b9f70",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/arnab/.local/lib/python3.8/site-packages/sklearn/utils/validation.py:70: FutureWarning: Pass shuffle=True, random_state=0 as keyword args. From version 1.0 (renaming of 0.25) passing these as positional arguments will result in an error\n",
+      "  warnings.warn(f\"Pass {args_msg} as keyword args. From version \"\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([0.89070684, 0.92614733, 0.93170934, 0.85834294, 0.97250337])"
+       "array([0.90322728, 0.92527008, 0.94214064])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,13 +54,13 @@
    "source": [
     "clf = LinearRegression()\n",
     "# cross_val_score(clf, X_train, Y_train)\n",
-    "cross_val_score(clf, iris.data, iris.target, cv = KFold=(3, t))"
+    "cross_val_score(clf, iris.data, iris.target, cv = KFold(3, True, 0))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c037cc8",
+   "id": "c093f789",
    "metadata": {},
    "outputs": [],
    "source": []
